<resources>
    <string name="app_name">PeopleMon GO HOME!</string>
    <string name="email_address">Email Address</string>
    <string name="full_name">Full Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="fill_out_required_fields">Please fill out all required fields!</string>
    <string name="provide_proper_email">Please provide a properly formatted email</string>
    <string name="password_no_match">The passwords do not match. Please try again</string>
    <string name="login">Login</string>
    <string name="enter_required_info">You must enter an email AND password!</string>
    <string name="reg_failed">Registration Failed</string>
    <string name="login_failed">Login failed!</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_map_view">Map</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
        AIzaSyAmb5NIB4_LAruEuxJKzmnvKvnwcqEsBho
    </string>
    <string name="denied">Permission Denied</string>
    <string name="error_retrieving_image">Error Retrieving Image</string>
    <string name="avatar_update_success">Avatar Updated Successfully!</string>
    <string name="avatar_update_fail">Avatar Update Failed</string>
    <string name="name_successful">Name Updated Successfully!</string>
    <string name="name_fail">Name Update Failed</string>
    <string name="nearby_failed">Nearby Search Failed</string>
    <string name="catch_success">You caught a Peep!</string>
    <string name="catch_failed">Catching Failed</string>
    <string name="peep_alert_title">You found a Peep!</string>
    <string name="peep_alert_message">Catch this Peep?</string>
    <string name="checkin_failed">Checkin Failed!</string>

</resources>
