<?xml version="1.0" encoding="utf-8"?>
<com.aaroncampbell.peoplemon.Views.RegisterView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/email_field"
        android:hint="@string/email_address"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/name_field"
        android:hint="@string/full_name"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/password_field"
        android:hint="@string/password"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/confirm_field"
        android:hint="@string/confirm_password"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"/>

    <Button
        android:text="@string/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/reg_button"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"/>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_gravity="center_horizontal"
        android:id="@+id/spinner"
        android:visibility="gone"/>
</com.aaroncampbell.peoplemon.Views.RegisterView>